# python-jsonrpc

./: .coveragerc  .gitignore  .travis.yml  .workonrc.products  .workonrc.py  COPYRIGHT  Makefile  README.md  README.rst  pytest.ini  python-jsonrpc.spec.in  requirements-test.txt  run-tests.py  run-tests.sh  setup.cfg  setup.py  tox.ini
examples/: README.md  app.wsgi  client.py  server.py  service.py  servicemodule_example.py
examples/apache2/sites-available/: jsonrpc.conf
examples/nginx/sites-available/: jsonrpc
examples/uwsgi/apps-available/: jsonrpc.ini
jsonrpc/: __init__.py  cgiwrapper.py  compat.py  json.py  modpywrapper.py  proxy.py  serviceHandler.py  servicehandler.py  wsgi.py
jsonrpc/_tests/: test_cgiwrapper.py  test_modpywrapper.py  test_proxy.py  test_serviceHandler.py  test_servicehandler.py
tests/: test_cgiwrapper.py  test_json.py  test_modpywrapper.py  test_proxy.py  test_servicehandler.py  test_wsgi.py
