[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jsonrpc
author = David Aguilar
author_email = davvid@gmail.com
description = A json-rpc package which implements JSON-RPC over HTTP.
long_description = file:README.rst
url = https://github.com/davvid/python-jsonrpc
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: JavaScript
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
platforms =
	POSIX
	Windows
keywords =
	json rpc
	json
	rpc
	http

[options]
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black-multipy
	pytest-cov

	# local
	coverage
	mock

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
